--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
+*{
+  margin : 0; 
+  
+
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Kumbh Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1{
+  font-size : 28px;
+  line-height:34px;
+}
+
+h2{
+  font-size : 24px;
+  line-height:29px;
+
+}
+h3{
+  font-size : 20px;
+  line-height:24px;
+}
+h3{
+  font-size : 14px;
+  line-height:18px;
+}
+p{
+  font-size : 16px;
+  line-height:26px;
 }
